versioned_docs/version-2.14/reference/targets/junit_tests.mdx
---
title: junit_tests
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Generate a `junit_test` target for each file in the `sources` field.

Backend: <span className="color--primary">`pants.backend.experimental.java`</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesourcescode}
</div>

## `sources`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`('*Test.java',)`}
>

A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['*Test.java', '!TestIgnore.java']`

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetimeoutcode}
</div>

## `timeout`

<Field
    type_repr={`int | None`}
    default_repr={`None`}
>

A timeout (in seconds) used by each test file belonging to this target.

If unset, will default to `[test].timeout_default`; if that option is also unset, then the test will never time out. Will never exceed `[test].timeout_maximum`. Only applies if the option `--test-timeouts` is set to true (the default).

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeextra_env_varscode}
</div>

## `extra_env_vars`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Additional environment variables to include in test processes.

Entries are strings in the form `ENV_VAR=value` to use explicitly; or just `ENV_VAR` to copy the value of a variable in Pants&#x27;s own environment.

This will be merged with and override values from `[test].extra_env_vars`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedependenciescode}
</div>

## `dependencies`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 dependencies` or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.14/docs/targets for more about how addresses are formed, including for generated targets. You can also run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codejdkcode}
</div>

## `jdk`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The major version of the JDK that this target should be built with. If not defined, will default to `[jvm].default_source_jdk`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeexperimental_provides_typescode}
</div>

## `experimental_provides_types`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Signals that the specified types should be fulfilled by these source files during dependency inference.

This allows for specific types within packages that are otherwise inferred as belonging to `jvm_artifact` targets to be unambiguously inferred as belonging to this first-party source.

If a given type is defined, at least one source file captured by this target must actually provide that symbol.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#coderesolvecode}
</div>

## `resolve`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

The resolve from `[jvm].resolves` to use when compiling this target.

If not defined, will default to `[jvm].default_resolve`.

</Field>

</span>
